Eliminado rota say hi, corrigindo mapeamento swagger do idvalidator e itens
